修改图片路径

--- a/bookmark.html
+++ b/bookmark.html
@@ -76,17 +76,17 @@ PS：IE下效果无法实现
 
 
 	.tab-wrap .tab-video{
-	    background-image:url("./icon-video.png");
+	    background-image:url("./img/icon-video.png");
 	}
 
 	.tab-wrap .tab-paper{
-	    background-image:url("./icon-paper.png");
+	    background-image:url("./img/icon-paper.png");
 	}
 	.tab-wrap .tab-ppt{
-	    background-image:url("./icon-ppt.png");
+	    background-image:url("./img/icon-ppt.png");
 	}
 	.tab-wrap .tab-ebook{
-	    background-image:url("./icon-ebook.png");
+	    background-image:url("./img/icon-ebook.png");
 	}
 
 
